--- a/Areas/Admin/Views/TruongLienCaps/DetailsTh.cshtml
+++ b/Areas/Admin/Views/TruongLienCaps/DetailsTh.cshtml
@@ -3,7 +3,11 @@
     ViewBag.Title = "Create";
     Layout = "~/Areas/Admin/Views/Shared/_Layout_Admin.cshtml";
 }
-
+<style>
+    .btn, .form-select, .form-control {
+        border-radius: 3px;
+    }
+</style>
     <div class="container-fluid px-12">
         <div class="card card-collapsable mt-3 mb-1">
             <div class="card-header">
