--- a/Areas/Admin/Views/AdminAuth/Login.cshtml
+++ b/Areas/Admin/Views/AdminAuth/Login.cshtml
@@ -102,7 +102,7 @@
                     contentType: "application/json;charset=utf-8",
                     success: function (res) {                      
                         if (res.success == true) {                           
-                            if (res.data === 'CollegerLogin') { window.location.href = '/Admin/HomeAdmin/Index'; }
+                            if (res.data === 'CollegerLogin') { window.location.href = '/Admin/TongHopSoLieuDKXTs/TheoDoiNopHoSo'; }
                             if (res.data === 'MasterLogin') { window.location.href = '/Admin/HocVienDangKys/DsHvDuTuyen'; }
                         } else {
                             $('#Login_Error').text(res.data);
