--- a/Areas/Admin/Views/DangKyXetTuyens/DkxtKQTthpt.cshtml
+++ b/Areas/Admin/Views/DangKyXetTuyens/DkxtKQTthpt.cshtml
@@ -13,9 +13,8 @@
     }
 
     .btn, .form-select, .form-control {
-        border-radius:3px;
+        border-radius: 3px;
     }
-  
 </style>
 <header class="page-header page-header-compact page-header-light border-bottom bg-white mb-2">
     <div class="container-fluid px-4">
@@ -40,9 +39,7 @@
             @using (Html.BeginForm("DkxtKQTthpt", "DangKyXetTuyens", FormMethod.Get))
             {
                 <div class="row g-1">
-                    <div class="col-xxl-1 col-xl-12" style="display:none">
-                        @Html.DropDownList("filteriDotxt", null, new { @class = "form-select " })
-                    </div>
+                   
                     <div class="col-xxl-2 col-xl-12">
                         @Html.DropDownList("filteriNvong", null, "Nguyện vọng...", new { @class = "form-select" })
                     </div>
@@ -67,10 +64,10 @@
                             <a class="btn btn-outline-primary bd-rd text-nowrap" id="bt_collapse" style="margin-right: 4px; display: none"><i data-feather="chevron-up" style="vertical-align:middle!important"></i></a>
                             <a class="btn btn-outline-primary bd-rd  text-nowrap" href="@Url.Action("ExportTsDkxtKQTthpt", "ExportDatas")" id="bt_export_excel" style="padding-right:6px; padding-left:6px" title="Xuất dữ liệu ra tệp excel"><i data-feather="download" style="vertical-align:middle!important"></i> Excel</a>
 
-                            
+
                             @*<button class="btn btn-outline-primary " id="bt_search" style="margin-right:4px">Lọc</button>
-                            <a class="btn btn-outline-secondary" id="bt_reset" href="@Url.Action("DkxtKQTthpt", "DangKyXetTuyens")" style="padding-right: 6px; padding-left: 6px; margin-right:4px">Tải lại</a>
-                            <a class="btn btn-outline-primary" id="bt_export_excel" href="@Url.Action("ExportTsDkxtKQTthpt", "ExportDatas")" style="padding-right:6px; padding-left:6px">Xuất excel</a>*@
+                                <a class="btn btn-outline-secondary" id="bt_reset" href="@Url.Action("DkxtKQTthpt", "DangKyXetTuyens")" style="padding-right: 6px; padding-left: 6px; margin-right:4px">Tải lại</a>
+                                <a class="btn btn-outline-primary" id="bt_export_excel" href="@Url.Action("ExportTsDkxtKQTthpt", "ExportDatas")" style="padding-right:6px; padding-left:6px">Xuất excel</a>*@
                         </div>
                     </div>
                     <hr class="mt-3 mb-2" />
@@ -112,7 +109,7 @@
                                     <th>Năm TN</th>
                                     <th>Lệ phí</th>
                                     <th>Hồ sơ</th>
-                                    <th>Ghi chú</th>
+
                                     <th style="width:100px">Cập nhật</th>
                                 </tr>
                             </thead>
@@ -128,134 +125,78 @@
                                     {
                                         foreach (var item in Model)
                                         {
-                            <tr>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.ThiSinhDangKy.ThiSinh_HoLot) @Html.DisplayFor(modelItem => item.ThiSinhDangKy.ThiSinh_Ten)
-                                </td>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.ThiSinhDangKy.ThiSinh_DienThoai)
-                                </td>
-                                <td>
-                                    NV @Html.DisplayFor(modelItem => item.Dkxt_KQTQG_NguyenVong)
-                                </td>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.Nganh.Nganh_TenNganh)
-                                </td>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.ToHopMon.Thm_TenToHop)
-                                </td>
+                                            <tr>
+                                                <td>
+                                                    @Html.DisplayFor(modelItem => item.ThiSinhDangKy.ThiSinh_HoLot) @Html.DisplayFor(modelItem => item.ThiSinhDangKy.ThiSinh_Ten)
+                                                </td>
+                                                <td>
+                                                    @Html.DisplayFor(modelItem => item.ThiSinhDangKy.ThiSinh_DienThoai)
+                                                </td>
+                                                <td>
+                                                    NV @Html.DisplayFor(modelItem => item.Dkxt_KQTQG_NguyenVong)
+                                                </td>
+                                                <td>
+                                                    @Html.DisplayFor(modelItem => item.Nganh.Nganh_TenNganh)
+                                                </td>
+                                                <td>
+                                                    @Html.DisplayFor(modelItem => item.ToHopMon.Thm_TenToHop)
+                                                </td>
 
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.Dkxt_KQTQG_TongDiem_Full)
-                                </td>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.Dkxt_KQTQG_NamTotNghiep)
-                                </td>
-                                <td>
-                                    @{
-                                        if (item.Dkxt_KQTQG_TrangThai_KinhPhi == 0)
-                                        {
-                                            @Html.DisplayName("Chưa nộp")
-
-                                        }
-                                        if (item.Dkxt_KQTQG_TrangThai_KinhPhi == 1)
-                                        {
-                                            @Html.DisplayName("Đã nộp, Chưa KT")
-
-                                        }
-                                        if (item.Dkxt_KQTQG_TrangThai_KinhPhi == 2)
-                                        {
-                                            @Html.DisplayName("Đã KT, có sai sót")
-
-                                        }
-                                        if (item.Dkxt_KQTQG_TrangThai_KinhPhi == 9)
-                                        {
-                                            @Html.DisplayName("Đã KT, đúng, đủ")
-
-                                        }
-                                    }
-                                </td>
-
-                                <td>
-                                    @{
-                                        if (item.Dkxt_KQTQG_TrangThai_KetQua == 0)
-                                        {
-                                            @Html.DisplayName("Chưa KT")
-                                        }
-                                        if (item.Dkxt_KQTQG_TrangThai_KetQua == 1)
-                                        {
-                                            @Html.DisplayName("MC sai")
-
-                                        }
-                                        if (item.Dkxt_KQTQG_TrangThai_KetQua == 2)
-                                        {
-                                            @Html.DisplayName("HS đầy đủ")
-                                        }
-                                    }
-                                </td>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.Dkxt_KQTQG_GhiChu)
-                                </td>
-                                <td>
-                                    <a href="@Url.Action("DkxtKQTthpt_hs_view", "DangKyXetTuyens", new {
-                                                                    dkxt_KQTQG_ID=item.Dkxt_KQTQG_ID,
-                                                                    filteriDotxt =ViewBag.DotxtFilteri,
-                                                                    filteriNvong =ViewBag.NvongFilteri,
-                                                                    filteriNganh =  ViewBag.NganhFilteri,
-                                                                    filteriLePhi = ViewBag.LePhiFilteri,
-                                                                    filteriHoSo =ViewBag.HoSoFilteri,
-                                                                    searchString =ViewBag.SearchString,
-                                                                    page = ViewBag.pageCurren })"
-                                       class="btn btn-light btn-sm">Kiểm tra</a>
-                                </td>
-                                @*<td>
-            @{
-                if (item.Dkxt_KQTQG_TrangThai_KetQua == 0)
-                {
-                    <a href="@Url.Action("DkxtKQTthpt_hs_view", "DangKyXetTuyens", new {
-                            dkxt_KQTQG_ID=item.Dkxt_KQTQG_ID,
-                            filteriDotxt =ViewBag.DotxtFilteri,
-                            filteriNvong =ViewBag.NvongFilteri,
-                            filteriNganh =  ViewBag.NganhFilteri,
-                            filteriLePhi = ViewBag.LePhiFilteri,
-                            filteriHoSo =ViewBag.HoSoFilteri,
-                            searchString =ViewBag.SearchString,
-                            page = ViewBag.pageCurren })" class="btn btn-outline-danger btn-sm bt-hs bd-rd">Chưa KT</a>
-                }
-                if (item.Dkxt_KQTQG_TrangThai_KetQua == 1)
-                {
-                    <a href="@Url.Action("DkxtKQTthpt_hs_view", "DangKyXetTuyens", new {
-                            dkxt_KQTQG_ID=item.Dkxt_KQTQG_ID,
-                            filteriDotxt =ViewBag.DotxtFilteri,
-                            filteriNvong =ViewBag.NvongFilteri,
-                            filteriNganh =  ViewBag.NganhFilteri,
-                            filteriLePhi = ViewBag.LePhiFilteri,
-                            filteriHoSo =ViewBag.HoSoFilteri,
-                            searchString =ViewBag.SearchString,
-                            page = ViewBag.pageCurren })" class="btn btn-outline-success btn-sm bt-hs bd-rd">MC sai</a>
-                }
-                if (item.Dkxt_KQTQG_TrangThai_KetQua == 2)
-                {
-                    <a href="@Url.Action("DkxtKQTthpt_hs_view", "DangKyXetTuyens", new {
-                            dkxt_KQTQG_ID=item.Dkxt_KQTQG_ID,
-                            filteriDotxt =ViewBag.DotxtFilteri,
-                            filteriNvong =ViewBag.NvongFilteri,
-                            filteriNganh =  ViewBag.NganhFilteri,
-                            filteriLePhi = ViewBag.LePhiFilteri,
-                            filteriHoSo =ViewBag.HoSoFilteri,
-                            searchString =ViewBag.SearchString,
-                            page = ViewBag.pageCurren })"
-                       class="btn btn-outline-primary btn-sm bt-hs bd-rd">Đã KT</a>
-
-                }
-            }
-        </td>
-        <td style="white-space:nowrap">
-            <a href="@Url.Action("DkxtKQTthpt_hs_view", "DangKyXetTuyens")" title="Xem chi tiết thông tin thí sinh"><i data-feather="list" style="vertical-align: middle !important "></i></a> |
-            <a href="@Url.Action("DkxtKQTthpt_hs_view", "DangKyXetTuyens", new { id = item.Dkxt_KQTQG_ID })" title="Chỉnh sửa thông tin thí sinh tin thí sinh"><i data-feather="edit" style="vertical-align: middle !important "></i></a> |
-            <a href="#" title="Xóa thông tin thí sinh"><i data-feather="trash-2" style="vertical-align:middle!important" disable></i></a>
-        </td>*@
-                            </tr>
+                                                <td>
+                                                    @Html.DisplayFor(modelItem => item.Dkxt_KQTQG_TongDiem_Full)
+                                                </td>
+                                                <td>
+                                                    @Html.DisplayFor(modelItem => item.Dkxt_KQTQG_NamTotNghiep)
+                                                </td>
+                                                <td>
+                                                    @{
+                                                        if (item.Dkxt_KQTQG_TrangThai_KinhPhi == 0)
+                                                        {
+                                                            <span style="color: red">Chưa nộp LP</span>
+                                                        }
+                                                        if (item.Dkxt_KQTQG_TrangThai_KinhPhi == 1)
+                                                        {
+                                                            <span style="color: red">Đã nộp, chưa KT</span>
+                                                        }
+                                                        if (item.Dkxt_KQTQG_TrangThai_KinhPhi == 2)
+                                                        {
+                                                            <span style="color:blue">Đã KT, Có sai sót</span>
+                                                        }
+                                                        if (item.Dkxt_KQTQG_TrangThai_KinhPhi == 3)
+                                                        {
+                                                            <span style="color:red">Đã sửa, chưa KT</span>
+                                                        }
+                                                        if (item.Dkxt_KQTQG_TrangThai_KinhPhi == 9)
+                                                        {
+                                                            <span>Đã KT, Đúng</span>
+                                                        }
+                                                    }
+                                                </td>
+                                                <td>
+                                                    @{
+                                                        if (item.Dkxt_KQTQG_TrangThai_HoSo == 0)
+                                                        {
+                                                            <span style="color: red">Đã nộp, chưa KT</span>
+                                                        }
+                                                        if (item.Dkxt_KQTQG_TrangThai_HoSo == 1)
+                                                        {
+                                                            <span style="color: blue">Đã KT, Có sai sót</span>
+                                                        }
+                                                        if (item.Dkxt_KQTQG_TrangThai_HoSo == 2)
+                                                        {
+                                                            <span style="color: red">Đã sửa, chưa KT</span>
+                                                        }
+                                                        if (item.Dkxt_KQTQG_TrangThai_HoSo == 9)
+                                                        {
+                                                            <span>Đã KT, HS đúng, đủ</span>
+                                                        }
+                                                    }
+                                                </td>                                              
+                                                <td>
+                                                    <a class="btn btn-light btn-sm" onclick="KiemtraThongTinDangky(@item.Dkxt_KQTQG_ID)">Kiểm tra</a>
+                                                </td>
+                                             
+                                            </tr>
                                         }
                                     }
 
@@ -266,8 +207,7 @@
                         <!-- Thêm mã phân trang -->
                         Trang @(Model.PageCount < Model.PageNumber ? 0 : Model.PageNumber) / Tổng @Model.PageCount trang/ (Tổng @ViewBag.totalRecod bản ghi)
                         @Html.PagedListPager(Model, page => Url.Action("DkxtKQTthpt", new
-                        {
-                            filteriDotxt = ViewBag.DotxtFilteri,
+                        {                          
                             filteriNvong = ViewBag.NvongFilteri,
                             filteriNganh = ViewBag.NganhFilteri,
                             filteriLePhi = ViewBag.LePhiFilteri,
@@ -283,4 +223,16 @@
         </div>
     </div>
 </div>
+<script>
+    function KiemtraThongTinDangky(id) {
+        var str_query = window.location.search;
 
+        if (str_query.length == 0) {
+            str_query = '?Dkxt_ID=' + id;
+        }
+        else {
+            str_query += '&Dkxt_ID=' + id;
+        }
+        window.location.href = "/Admin/DangKyXetTuyens/DkxtKQTthpt_hs_view" + str_query;
+    }
+</script>
