--- a/Areas/Admin/Views/TruongLienCaps/DeleteTh.cshtml
+++ b/Areas/Admin/Views/TruongLienCaps/DeleteTh.cshtml
@@ -4,7 +4,11 @@
     ViewBag.Title = "Delete";
     Layout = "~/Areas/Admin/Views/Shared/_Layout_Admin.cshtml";
 }
-
+<style>
+    .btn, .form-select, .form-control {
+        border-radius: 3px;
+    }
+</style>
 <header class="page-header page-header-compact page-header-light border-bottom bg-white mb-2">
     <div class="container-fluid px-4">
         <div class="page-header-content">
