--- a/Areas/Admin/Views/TruongLienCaps/DetailsThcs.cshtml
+++ b/Areas/Admin/Views/TruongLienCaps/DetailsThcs.cshtml
@@ -4,6 +4,11 @@
     ViewBag.Title = "Create";
     Layout = "~/Areas/Admin/Views/Shared/_Layout_Admin.cshtml";
 }
+<style>
+    .btn, .form-select, .form-control {
+        border-radius: 3px;
+    }
+</style>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/css/bootstrap-datepicker.min.css">
 <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/js/bootstrap-datepicker.min.js"></script>
@@ -472,7 +477,9 @@
                 </div>
             </div>
         </div>
+    </div>
 </div>
+
 <div class="toast-container position-fixed bottom-0 end-0 p-3">
     <div id="myToast" class="toast" role="alert" aria-live="assertive" aria-atomic="true">
         <div class="toast-header">
