--- a/Areas/Admin/Views/TruongLienCaps/LcTieuhoc.cshtml
+++ b/Areas/Admin/Views/TruongLienCaps/LcTieuhoc.cshtml
@@ -6,7 +6,11 @@
     ViewBag.Title = "LcTieuhoc";
     Layout = "~/Areas/Admin/Views/Shared/_Layout_Admin.cshtml";
 }
-
+<style>
+    .btn, .form-select, .form-control {
+        border-radius: 3px;
+    }
+</style>
 <style>
     th, td {
         white-space: nowrap;
