--- a/Areas/Admin/Views/TruongLienCaps/LcTrunghocCs.cshtml
+++ b/Areas/Admin/Views/TruongLienCaps/LcTrunghocCs.cshtml
@@ -8,6 +8,11 @@
     Layout = "~/Areas/Admin/Views/Shared/_Layout_Admin.cshtml";
 }
 <style>
+    .btn, .form-select, .form-control {
+        border-radius: 3px;
+    }
+</style>
+<style>
     th, td {
         white-space: nowrap;
     }
