--- a/Views/Auth/RegisterColleger.cshtml
+++ b/Views/Auth/RegisterColleger.cshtml
@@ -289,7 +289,7 @@
 
     .login-button {
         padding: 8px 18px;
-        border-radius: 7px !important;
+        border-radius: 3px !important;
         background-color: #ff6a00;
         border: none;
         color: #fff;
@@ -300,7 +300,9 @@
             background-color: #808080;
             color: #fff;
         }
-
+    .form-select, .form-control, .btn {
+        border-radius: 3px !important;
+    }
     th {
         color: #ff6a00 !important;
     }
